refactor: 重构项目结构和功能
- 更新 .gitignore 文件，排除特定的 dist 子目录
- 修改 package.json，添加 build 后的依赖同步脚本
- 删除 public/index.html，清除未使用的静态页面
- 重构 src/app.ts，引入路由模块化设计
- 更新文件上传处理逻辑，调整为新的项目结构
- 修改 TypeScript 配置，优化项目构建输出

--- a/.gitignore
+++ b/.gitignore
@@ -9,11 +9,9 @@ yarn-error.log
 .env.*.local
 
 # Build output
-dist/*
-!dist/package.json
-!dist/.env.example
-!dist/drizzle/
-!dist/index.js
+dist/public/uploads/
+dist/.forever
+dist/server/
 build/
 
 # TypeScript
@@ -39,8 +37,6 @@ package-lock.json
 yarn.lock
 
 *.zip
-
-public/uploads/
 
 logs/
 
