refactor: 重构项目结构并添加测试功能
- 更新项目结构，删除冗余代码
- 添加 Vitest 测试框架
- 调整 TypeScript 配置
- 更新 .env 和 .gitignore 文件

--- a/.gitignore
+++ b/.gitignore
@@ -11,7 +11,7 @@ yarn-error.log
 # Build output
 dist/public/uploads/
 dist/.forever
-dist/server/
+dist/app/
 build/
 
 # TypeScript
@@ -43,3 +43,5 @@ logs/
 temp.txt
 
 pnpm-*.yaml
+
+coverage/
