build: 优化构建脚本并移除 sync-deps.js
- 更新 package.json 中的 build 脚本，使用 tsx 执行 sync-deps.ts
- 删除 scripts/sync-deps.js 文件，改为使用 TypeScript 编写

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
 	"private": true,
 	"scripts": {
 		"dev": "cross-env NODE_ENV=development tsx watch app/index.ts",
-		"build": "tsc && node scripts/sync-deps.js",
+		"build": "tsc && tsx scripts/sync-deps.ts",
 		"postbuild": "cross-zip dist ulti_ido_node.zip",
 		"start": "node dist/app/index.js",
 		"db:push": "drizzle-kit push",
