--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
 	"version": "1.0.0",
 	"private": true,
 	"scripts": {
-		"dev": "cross-env NODE_ENV=development tsx watch app/index.ts",
+		"dev": "cross-env NODE_ENV=development tsx watch index.ts",
 		"build": "tsc && tsx scripts/sync-deps.ts",
 		"postbuild": "cross-zip dist ulti_ido_node.zip",
 		"start": "node dist/app/index.js",
