--- a/backend/package.json
+++ b/backend/package.json
@@ -26,6 +26,7 @@
 		"winston-daily-rotate-file": "^5.0.0"
 	},
 	"devDependencies": {
+		"@eslint/js": "^9.33.0",
 		"@types/node": "^24.3.0",
 		"@vitest/coverage-v8": "^1.4.0",
 		"cross-zip-cli": "^1.0.0",
