--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,18 +9,20 @@
     "lint": "eslint"
   },
   "dependencies": {
-    "next": "15.5.0",
-    "react": "19.1.0",
-    "react-dom": "19.1.0"
+    "next": "^15.5.0",
+    "react": "^19.1.1",
+    "react-dom": "^19.1.1"
   },
   "devDependencies": {
-    "@eslint/eslintrc": "^3",
+    "@eslint/eslintrc": "^3.3.1",
+    "@next/eslint-plugin-next": "^15.5.0",
     "@types/node": "^22.17.2",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
-    "eslint": "^9",
-    "eslint-config-next": "15.5.0",
-    "typescript": "^5"
+    "@types/react": "^19.1.10",
+    "@types/react-dom": "^19.1.7",
+    "eslint": "^9.33.0",
+    "eslint-config-next": "^15.5.0",
+    "eslint-plugin-react-hooks": "^5.2.0",
+    "typescript": "^5.9.2"
   },
   "pnpm": {
     "neverBuiltDependencies": []
