--- a/backend/package.json
+++ b/backend/package.json
@@ -2,6 +2,7 @@
 	"name": "hono-first-backend",
 	"version": "1.0.0",
 	"private": true,
+	"main": "app",
 	"scripts": {
 		"dev": "cross-env NODE_ENV=development tsx watch index.ts",
 		"build": "tsc && tsx scripts/sync-deps.ts",
